[ICC-242] 여덟번째 시도